--- a/public/posts/net-core-api-oauth-integration.mdx
+++ b/public/posts/net-core-api-oauth-integration.mdx
@@ -63,7 +63,7 @@ This blog's .NET API customises default behaviour to meet the following requirem
 | Standards Based | I use the same standards-based design patterns for OAuth security across Node.js, .NET and Java APIs. |
 | Best Security | The [jose-jwt](https://github.com/dvsekhvalnov/jose-jwt) library enables the most up to date and specialised security algorithms when dealing with JWTs. |
 | Extensible Claims | APIs are in full control of the claims principal and are not forced to only use the authorization server's claims. |
-| Supportable | Errors and logs use custom formats and identity-related error details are included in the API's logs. |
+| Supportable | The API outputs request logs and audit logs with good queryability and includes identity related details. |
 
 In .NET the OAuth code uses the same main phases as other APIs in this blog:
 
@@ -137,7 +137,7 @@ private void ConfigureOAuth(IServiceCollection services)
 }
 ```
 
-The implementation's main logic calls an *OAuthFilter* object, which validates the JWT access token and controls claims that the API code uses later for authorization. The handler also customises API log data and error response formats.
+The implementation's main logic calls an *OAuthFilter* object, which validates the JWT access token and produces a *ClaimsPrincipal* object that the API code uses later for authorization. The handler also include identity details in logs, enforces required scopes and makes the *ClaimsPrincipal* resolvable in business logic.
 
 ```csharp
 protected override async Task<AuthenticateResult> HandleAuthenticateAsync()
@@ -147,10 +147,26 @@ protected override async Task<AuthenticateResult> HandleAuthenticateAsync()
 
     try
     {
-        var filter = (OAuthFilter)this.Context.RequestServices.GetService(typeof(OAuthFilter));
-        var claimsPrincipal = await filter.ExecuteAsync(this.Request);
+        var oauthFilter = (OAuthFilter)this.Context.RequestServices.GetService(typeof(OAuthFilter));
+        var claimsPrincipal = await oauthFilter.ExecuteAsync(this.Request);
 
-        logEntry.SetIdentity(claimsPrincipal.JwtClaims.Sub);
+        var userId = claimsPrincipal.Jwt.Sub;
+        var scope = claimsPrincipal.Jwt.Scope.Split(" ").ToList();
+        var loggedClaims = new JsonObject
+        {
+            ["managerId"] = claimsPrincipal.Jwt.GetStringClaim(ClaimNames.ManagerId),
+            ["role"] = claimsPrincipal.Jwt.GetStringClaim(ClaimNames.Role),
+        };
+        logEntry.SetIdentity(userId, scope, loggedClaims);
+
+        var oauthConfiguration = (OAuthConfiguration)this.Context.RequestServices.GetService(typeof(OAuthConfiguration));
+        if (!scope.Contains(oauthConfiguration.Scope))
+        {
+            throw ErrorFactory.CreateClientError(
+                HttpStatusCode.Forbidden,
+                BaseErrorCodes.InsufficientScope,
+                "The token does not contain sufficient scope for this API");
+        }
 
         var ticket = new AuthenticationTicket(claimsPrincipal, new AuthenticationProperties(), this.Scheme.Name);
         return AuthenticateResult.Success(ticket);
@@ -161,7 +177,10 @@ protected override async Task<AuthenticateResult> HandleAuthenticateAsync()
         var clientError = handler.HandleException(exception, this.Context);
 
         logEntry.End(this.Context.Request, this.Context.Response);
-        logEntry.Write();
+
+        var loggerFactory = (ILoggerFactory)this.Context.RequestServices.GetService(typeof(ILoggerFactory));
+        loggerFactory.GetRequestLogger()?.Info(logEntry.GetRequestLog());
+        loggerFactory.GetAuditLogger()?.Info(logEntry.GetAuditLog());
 
         this.Request.HttpContext.Items.TryAdd(ClientErrorKey, clientError);
         return AuthenticateResult.NoResult();
@@ -279,7 +298,7 @@ private bool IsUserAuthorizedForCompany(Company company)
 }
 ```
 
-### OAuth Middleware
+### OAuth Filter
 
 The *OAuthFilter* object encapsulates the overall OAuth work and deals with injecting claims into the claims principal when needed. In .NET it is also possible to add extra claims in an [OnTokenValidated](https://learn.microsoft.com/en-us/dotnet/api/microsoft.aspnetcore.authentication.jwtbearer.jwtbearerevents.ontokenvalidated) event handler.
 
@@ -350,12 +369,13 @@ The client can then take various types of action based on the HTTP status and er
 
 ![500 error display](../images/330/500-error-display.jpg?v=20241201)
 
-### API Logs and Identity Data
+### API Structured Logs
 
-API logs include details about OAuth errors, which helps when there is a configuration problem. For HTTP status 4xx errors the logged error content is concise, whereas 5xx errors contain further details. Any type of error entry should explain the cause. The following example shows a 401 error due to a rejected token, which includes context that the API does not return to the client:
+API request logs record error details for all failed requests, to help with problem resolution. For HTTP status 4xx errors the logged error content is concise, whereas 5xx errors contain further details. Any type of error entry should explain the cause. The following example shows a 401 error due to a rejected token, which includes context that the API does not return to the client:
 
 ```json
 {
+  "type": "request",
   "id": "b3629a0d-fc73-46b7-a3ca-6115963e8e43",
   "utcTime": "2022-12-10T13:17:28",
   "apiName": "FinalApi",
@@ -381,7 +401,7 @@ API logs include details about OAuth errors, which helps when there is a configu
 }
 ```
 
-After the API validates a JWT, it writes the received subject claim, most commonly a UUID, to a *userId* field in the request's API log entry. This can potentially help to track users in benign ways, for technical support purposes. Doing so requires care and I say more about secure logs in the <a href='effective-api-logging.mdx'>Effective API Logging</a> post.
+The API also writes identity details to logs after successful JWT validation. The received subject claim, most commonly a UUID, is recorded to the *userId* field of API request logs. Audit logs also include fields for *isAuthenticated*, *isAuthorized*, *scope* and *claims*, to provide visibility of security activity.
 
 ### Where Are We?
 
