--- a/public/posts/log-aggregation-setup.mdx
+++ b/public/posts/log-aggregation-setup.mdx
@@ -374,7 +374,7 @@ The <a href='api-technical-support-analysis.mdx'>Technical Support Analysis</a> 
 
 ![log queries](../images/390/log-queries.jpg?v=20240818)
 
-### Step 12: Understand Ingested Logs
+### Step 12: Understand Log Documents
 
 Each log entry is received as a JSON document within an index of the form *api-request-2022-07-24* or *api-audit-2022-07-24*. You can filter data using queries that reference top level fields. Meanwhile, JSON objects in logs, such as those used to represent errors, maintain their structure:
 
